--- a/week4-project/index.html
+++ b/week4-project/index.html
@@ -8,9 +8,10 @@
 	</head>
 	<body>
 		<h1>Lyric Generator</h1>
-    
-    <input id="theArtistInput" placeholder="Enter Artist Here"></input>
-    <input id="theSongInput" placeholder="Enter Song Name Here"></input>
+		<h2>Find the lyrics to all of your favorite songs just by entering the Artist and the Song Title</h2>
+
+    <input id="theArtistInput" placeholder="Artist"></input>
+    <input id="theSongInput" placeholder="Song"></input>
 
     <button id="theButton">Search</button>
     <!--<button id="theSongButton">Search</button>-->
