Adding files from the latest project for IM (D3 project for data visualization

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
     <a href="week4-inclass/index.html" class="w3-block w3-button w3-left-align" style="width=100%">Week 4: In class working with combining APIs</a>
     <a href="week4-project/index.html" class="w3-block w3-button w3-left-align" style="width=100%">Week 4: Project using 1 api to query data and display it</a>
     <a href="week5-project1/index.html" class="w3-block w3-button w3-left-align" style="width=100%">Week 5 [Project 1]: Using 2 APIs to query song lyrics and run them through sentiment analysis</a>
+    <a href="week8-project2/index.html" class="w3-block w3-button w3-left-align" style="width=100%">Week 8 [Project 2]: Visualizing World Data using D3</a>
   </div>
 
   <div>
